<resources>
    <string name="app_name">Instalock</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="summoner_name">Summoner name</string>
    <string name="region">Region</string>
    <string name="login">Log in</string>

    <string name="p_region">#%1$s</string>

    <string name="p_matches">Matches</string>
    <string name="p_champions">Champions</string>

    <string name="c_overview">Overview</string>
    <string name="c_abilities">Abilities</string>
    <string name="c_lore">Lore</string>

    <string name="nav_open">Open navigation</string>
    <string name="nav_close">Close navigation</string>

    <string name="page_profile">Profile</string>
    <string name="profile">Profile</string>
    <string name="back">Go back</string>
    <string name="log_out">Log out</string>
    <string name="live_game">Live game</string>
    <string name="champions">Champions</string>

    <string name="loading">Loading…</string>

    <string name="search_champions">Champion name</string>
    <string name="search">Search</string>

    <string name="champion_full">%1$s, %2$s</string>
    <string name="ability_full">%1$s: %2$s</string>

    <string name="champ_level">Level: %1$s</string>
    <string name="champ_points">Points: %1$s</string>

    <string name="c_rating_physical">Physical:</string>
    <string name="c_rating_magic">Magic:</string>
    <string name="c_rating_defence">Defence:</string>
    <string name="c_rating_difficulty">Difficulty:</string>

    <string name="no_mastery">Seems like you dont have any masteries.</string>
    <string name="no_matches">Seems like you dont have any masteries.</string>

    <string name="special_udyr">Udyr</string>
    <string name="special_jhin">Jhin</string>
    <string name="special_warwick">Warwick</string>
    <string name="special_neeko">Neeko</string>
    <string name="special_mordekaiser">Mordekaiser</string>
    <string-array name="special_snowflakes">
        <item>@string/special_udyr</item>
        <item>@string/special_jhin</item>
        <item>@string/special_neeko</item>
        <item>@string/special_warwick</item>
        <item>@string/special_mordekaiser</item>
    </string-array>
</resources>