<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.COverviewFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/c_rating_physical" />

            <com.google.android.material.slider.Slider
                android:id="@+id/rating_physical"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:stepSize="10.0"
                android:theme="@style/Theme.MaterialComponents"
                android:valueFrom="0.0"
                android:valueTo="100.0"
                app:thumbColor="@color/colorRed"
                app:trackColorActive="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/c_rating_magic" />

            <com.google.android.material.slider.Slider
                android:id="@+id/rating_magic"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:stepSize="10.0"
                android:theme="@style/Theme.MaterialComponents"
                android:valueFrom="0.0"
                android:valueTo="100.0"
                app:thumbColor="@color/colorRed"
                app:trackColorActive="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/c_rating_defence" />

            <com.google.android.material.slider.Slider
                android:id="@+id/rating_defense"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:stepSize="10.0"
                android:theme="@style/Theme.MaterialComponents"
                android:valueFrom="0.0"
                android:valueTo="100.0"
                app:thumbColor="@color/colorRed"
                app:trackColorActive="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/c_rating_difficulty" />

            <com.google.android.material.slider.Slider
                android:id="@+id/rating_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:stepSize="10.0"
                android:theme="@style/Theme.MaterialComponents"
                android:valueFrom="0.0"
                android:valueTo="100.0"
                app:thumbColor="@color/colorRed"
                app:trackColorActive="@color/colorAccent" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>